--- a/gitit.css
+++ b/gitit.css
@@ -32,3 +32,19 @@ p{
     color: white;
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
 }
+.iie{
+    text-align: center;
+    color: white;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+    margin-top: 0px;
+}
+.bfm{
+    text-align: center;
+    color: gray;
+    text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.5);
+    margin-top: -35px;
+}
+.bfm:hover{
+    cursor: pointer;
+    color: rgb(75, 74, 74);
+}
